--- a/amazon_clone/ama.html
+++ b/amazon_clone/ama.html
@@ -22,9 +22,11 @@
             </div>
             <div class="nav-search border">
                 <select class="select-search">
-                    <option>
-                        All
-                    </option>
+                    <option>All</option>
+                    <option value="beauty products"><a href="#">cosmetics</a></option>
+                    <option value="phones"><a href="#">mobiles and gadgets</a></option>
+                    <option value="clothes"><a href="#">clothng and accessories</a></option>
+                    <option value="computer and accessories"><a href="#">computer and accessories</a></option>
                 </select>
                 <input placeholder="search Amazon" class="input">
                 <div class="search-icon">l̥ō
