--- a/amazon_clone/ama.html
+++ b/amazon_clone/ama.html
@@ -29,19 +29,19 @@
                     <option value="computer and accessories"><a href="#">computer and accessories</a></option>
                 </select>
                 <input placeholder="search Amazon" class="input">
-                <div class="search-icon">l̥ō
+                <div class="search-icon">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
-            <!-- <div class="language">
+            <!-- box4 -->
+            <div class="language">
                 <div class="flag"></div>
                 <select class="select-lang">
-                    <option value="eng" >
-                       
-                       
-                    </option>
+                    <option value="eng" >eng</option>
+                    <option value="hindi">hindi</option>
+                    <option value="marathi">marathi</option>
                 </select>
-            </div> -->
+            </div>
             <div class="nav-signin border">
                 <p><span>Hello, sign in</span></p>
                 <p class="nav-second">Account & Lists</p>
