--- a/amazon_clone/ama.html
+++ b/amazon_clone/ama.html
@@ -37,9 +37,9 @@
             <div class="language">
                 <div class="flag"></div>
                 <select class="select-lang">
-                    <option value="eng" >eng</option>
-                    <option value="hindi">hindi</option>
-                    <option value="marathi">marathi</option>
+                    <option value="EN" >english</option>
+                    <option value="HI">hindi</option>
+                    <option value="MR">marathi</option>
                 </select>
             </div>
             <div class="nav-signin border">
