--- a/amazon_clone/ama.html
+++ b/amazon_clone/ama.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <!-- box4 -->
-            <div class="language">
+            <div class="language border">
                 <div class="flag"></div>
                 <select class="select-lang">
                     <option value="EN" >english</option>
