--- a/amazon_clone/ama.html
+++ b/amazon_clone/ama.html
@@ -86,7 +86,7 @@
                 </p>
                 <p>
 
-                    Today's Deals
+                    Today's Deals</p>
             </div>
             <div class="panel-deals">
                 shop deals in electronics
