--- a/amazon_clone/ama.html
+++ b/amazon_clone/ama.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="ama.css">
 </head>
 <body>
-      <header>
+      <header>  
         <div class="navbar">
             <div class="nav_logo border">
                 <div class="logo"></div>
@@ -43,7 +43,7 @@
                 </select>
             </div>
             <div class="nav-signin border">
-                <p><span>Hello, sign in</span></p>
+                <p><span>Hello, <a href="login.html">sign in</a></span></p>
                 <p class="nav-second">Account & Lists</p>
             </div>
             <div class="return border">
